--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-    <link rel="icon" href="resources/favicon.ico" type="image/gif" sizes="16x16">
+    <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
     <!-- stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -194,7 +194,7 @@
                     Indian Sweet-Paan
                 </h3>
                 <p class="product-desc">
-                    Lets' say Beeda, that sounds good, right. And it also tastes good. We make everything Special and this is beyond that.  
+                    Lets' say Beeda, that sounds good, right! And it also tastes good. We make everything Special and this is beyond that.  
                 </p>
             </div>
             <div class="col-lg-5 product-image-set-alt d-none d-lg-block">
@@ -264,10 +264,10 @@
 
     <div class="container-fluid alert alert-secondary author-quote" >
         <p class="author-quote-data">&emsp; <em><strong>"</strong>
-             We younster! Believe that happy moments are captured well in memories than camera. So, for your every parties and weddings make the moments of joy and happiness, The Happiest with <strong>LightsOut
+             We younsters! Believe that happy moments are captured well in memories than camera. So, for your every parties and weddings make the moments of joy and happiness, The Happiest with <strong>LightsOut
             "</strong></em></p>
         <p class="author-quote-name">
-            <em>-ManojKumar Vasudevan, CEO.</em>
+            <em>-ManojKumar Vasudevan, The Boss</em>
         </p>
     </div>
     <!-- places -->
